# imageProcessor-CS112-A3

./: CMakeLists.txt  CS112_A3_Part1_S24_20230553_20230231_20230121.cpp  README.md  imageProcessor.cpp
Qt Creator/Image_Processor/: App.qml  CMakeLists.txt  Image_screen.qml  Save_button.qml
Qt Creator/Photoshop_budget/: CMakeLists.txt  Image_Class.h  Resources.qrc  image_processor.h  image_processor_code.cpp  main.cpp  photoshop_budget.cpp  photoshop_budget.h  photoshop_budget.ui  rsc.qrc
Qt/PhotoShop_on_a_budget/: CMakeLists.txt  Image Processor.qtbridge  PhotoShop_on_a_budget.qmlproject  PhotoShop_on_a_budget.qmlproject.qtds  Screen01.ui.qml  qmlmodules  qtquickcontrols2.conf
Qt/PhotoShop_on_a_budget/content/: App.qml  CMakeLists.txt  Filter_button.qml  Filter_button.ui.qml  Load_button.qml  Load_button.ui.qml  Main_screen.qml  MyMyLoad_button.qml  Save_button.ui.qml  Screen01.ui.qml
Qt/PhotoShop_on_a_budget/imports/: CMakeLists.txt
Qt/PhotoShop_on_a_budget/imports/PhotoShop_on_a_budget/: CMakeLists.txt  qmldir
Qt/PhotoShop_on_a_budget/imports/PhotoShop_on_a_budget/designer/: plugin.metainfo
Qt/PhotoShop_on_a_budget/src/: import_qml_plugins.h
